fix small image for banner, spacing between sections, left and eight image visibility in client carousel and width for blog posts sub headings

--- a/css/index.css
+++ b/css/index.css
@@ -348,8 +348,7 @@ body {
 /* banner section */
 
 .banner-section {
-  padding-top: 89px;
-  padding-bottom: 146px;
+  padding: 80px 0px;
 }
 
 .banner-section .slick-slide .row {
@@ -380,10 +379,13 @@ body {
   content: url(../assets/images/global/banner-arrow-right.svg);
 }
 
+.banner-section .slick-slide .small-img-col {
+  margin-top: -45px;
+}
+
 /* work section */
 
 .work-section {
-  padding-top: 10px;
   padding-bottom: 80px;
 }
 
@@ -412,12 +414,16 @@ body {
   transform: scale(1.4);
 }
 
+.work-slider .slick-slide[aria-hidden="true"] {
+  visibility: hidden;
+}
+
 .work-section #work-grid .work-slider .slick-center .preview-img-div img {
   visibility: visible;
 }
 
 .work-section #work-grid .work-slider .slide .logo-img-div {
-  margin-top: -20px;
+  margin-top: -30px;
 }
 
 .work-section .work-slider .slick-prev {
@@ -449,7 +455,7 @@ body {
 }
 
 .services-section #services-grid .col-2 {
-  margin-bottom: 78px;
+  margin-bottom: 80px;
 }
 
 .services-section #services-grid .col-2 .service-div {
@@ -490,8 +496,7 @@ body {
 /* Our Clients section */
 
 .clients-section {
-  padding-top: 17px;
-  padding-bottom: 67px;
+  padding-bottom: 80px;
 }
 
 .clients-section #clients-row {
@@ -509,7 +514,6 @@ body {
 /* Blog Section */
 
 .blogs-section {
-  padding-top: 71px;
   padding-bottom: 80px;
 }
 
@@ -538,8 +542,8 @@ body {
 }
 
 .blogs-section #blogs-row .blog-div .text-div {
+  width: 50%;
   margin-top: -30px;
-  margin-right: 45%;
   transition: all 0.2s ease-in-out;
   position: relative;
 }
@@ -576,8 +580,7 @@ body {
 /* Recognition section */
 
 .recognition-section {
-  padding-top: 17px;
-  padding-bottom: 83px;
+  padding-bottom: 80px;
 }
 
 .recognition-section #recognition-row {
@@ -594,8 +597,7 @@ body {
 
 /* FAQ section */
 .faq-section {
-  padding-top: 50px;
-  padding-bottom: 94px;
+  padding-bottom: 80px;
 }
 
 .faq-section #faq-row {
@@ -662,7 +664,6 @@ body {
 /* contact section */
 
 .contact-section {
-  padding-top: 80px;
   padding-bottom: 80px;
 }
 
@@ -885,7 +886,7 @@ footer .division-social-media {
   /* Blogs section */
 
   .blogs-section #blogs-row .blog-div .text-div {
-    margin-right: 15%;
+    width: 100%;
   }
 
   /* recognisation section */
